--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <title>MyFirst Page</title>
 </head>
-<body>
-    <!--<img src="https://img.freepik.com/free-psd/google-icon-isolated-3d-render-illustration_47987-9777.jpg?w=2000" alt="Google Image">-->
-    <img src="mahipal1.png" alt="My profile">
-    <h1>Mahipal Keluth</h1>
-    <p><em><strong><a href="https://www.google.com/search?client=firefox-b-d&q=google">CSE</a></strong> Student.</em></p>
-    <p>Present studying in E3-SEM1, RGUKT-Basar.</p>
+<body style="background-color: #00F5FF;">
+    <table>
+        <tr>
+            <td><img src="mahipal2.png" alt="My profile" width="120" height="120"></td>
+            <td>
+                <h1>Mahipal Keluth</h1>
+                <p><em><strong><a href="https://www.google.com/search?client=firefox-b-d&q=google">CSE</a></strong> Student.</em></p>
+                <p>Present studying in E3-SEM1, RGUKT-Basar.</p>
+            </td>
+        </tr>
+    </table>
     <hr>
     <h3>Courses and Branches</h3>
     <ul>
@@ -23,22 +28,20 @@
         <li><a href="https://www.chess.com/play"> Chess</a></li>
         <li><a href="https://www.youtube.com/">Kabaddi</a></li>
     </ol>
-    <br>
-    <hr>
-    <a href="contact.html">contactdetails</a>
-    <br>
     <hr>
     <table cellspacing="10">
         <th>Skills</th>
         <tr>
             <td>Cricket</td>
-            <td>✔✔✔</td>
+            <td>⭐⭐⭐</td>
         </tr>
         <tr>
             <td>Kbaddi</td>
-            <td>✔✔</td>
+            <td>⭐⭐</td>
         </tr>
     </table>
+    <hr>
+    <a href="contact.html">contactdetails</a>
            
 </body>
 </html>
